syntax = "proto2";

import "svg.proto";

package route.serialize;

message RenderSettings {
    required double width = 1;
    required double height = 2;
    required double padding = 3;
    required double stop_radius = 4;
    required double line_width = 5;
    required int32 bus_label_font_size = 6;
    repeated double bus_label_offset = 7;
    required int32 stop_label_font_size = 8;
    repeated double stop_label_offset = 9;
    required Color underlayer_color = 10;
    required double underlayer_width = 11;
    repeated Color color_palette = 12;  
}
